@@ -20,7 +20,7 @@
 	<string>APPL</string>
 
 	<key>CFBundleShortVersionString</key>
-	<string>0.4.5-rc3</string>
+	<string>0.4.5</string>
 
 	<key>CFBundleSignature</key>
 	<string>nnbt</string>
