@@ -1,6 +1,6 @@
 .\" Man page generated from reStructeredText.
 .
-.TH NEUBOT 1 "2011-11-14" "Neubot 0.4.5-rc3" "Neubot manual"
+.TH NEUBOT 1 "2011-11-14" "Neubot 0.4.5" "Neubot manual"
 .SH NAME
 neubot \- The network neutrality bot
 .
