@@ -99,7 +99,7 @@ distutils.core.setup(name="neubot",
                      license="GPLv3",
                      packages=PACKAGES,
                      package_data={"neubot": PACKAGE_DATA},
-                     version="0.4.5-rc3",
+                     version="0.4.5",
                      author="Simone Basso",
                      author_email="bassosimone@gmail.com",
                      windows=WINDOWS,
