@@ -107,7 +107,7 @@ VERSIONDIR = os.path.dirname(os.path.dirname(os.path.dirname(
 BASEDIR = os.path.dirname(VERSIONDIR)
 
 # Version number in numeric representation
-VERSION = "0.004005003"
+VERSION = "0.004005999"
 
 #
 # Common
