@@ -65,7 +65,7 @@ class WebkitGUI(gtk.Window):
         if ICON:
             self.set_icon_from_file(ICON)
 
-        self.set_title('Neubot 0.4.5-rc3')
+        self.set_title('Neubot 0.4.5')
         self.connect('destroy', gtk.main_quit)
         self.maximize()
         self._open_web_page(uri)
