@@ -35,18 +35,18 @@ if [ `id -u` -ne 0 ]; then
 fi
 
 echo 'BEGIN: Create debian package...'
-test -f dist/neubot-0.4.5-rc3-1_all.deb || { make clean; make deb; }
+test -f dist/neubot-0.4.5-1_all.deb || { make clean; make deb; }
 echo 'END: Create debian package (OK)'
 
 echo 'BEGIN: Install debian package...'
-dpkg -i dist/neubot-0.4.5-rc3-1_all.deb
+dpkg -i dist/neubot-0.4.5-1_all.deb
 echo 'END: Install debian package (OK)'
 
 echo '*** Please close the notification window...'
 sleep 15
 
 echo 'BEGIN: Try to install -nox package...'
-dpkg -i dist/neubot-nox-0.4.5-rc3-1_all.deb && exit 1
+dpkg -i dist/neubot-nox-0.4.5-1_all.deb && exit 1
 echo 'BEGIN: Try to install -nox package (OK)'
 
 echo 'BEGIN: Cleanup...'
@@ -55,14 +55,14 @@ test -f /var/neubot/database.sqlite3 && exit 1
 echo 'END: Cleanup (OK)'
 
 echo 'BEGIN: Install the -nox package...'
-dpkg -i dist/neubot-nox-0.4.5-rc3-1_all.deb
+dpkg -i dist/neubot-nox-0.4.5-1_all.deb
 echo 'END: Install the -nox package (OK)'
 
 echo '*** Please close the notification window...'
 sleep 15
 
 echo 'BEGIN: Try to install the normal package...'
-dpkg -i dist/neubot-0.4.5-rc3-1_all.deb && exit 1
+dpkg -i dist/neubot-0.4.5-1_all.deb && exit 1
 echo 'BEGIN: Try to install the normal package (OK)'
 
 echo 'BEGIN: Cleanup...'
